libav (4:0.7~b1-3) UNRELEASED; urgency=low

  * start new upload

 -- Reinhard Tartler <siretart@tauware.de>  Tue, 03 May 2011 13:12:58 +0200

libav (4:0.7~b1-2) experimental; urgency=low

  * don't try to install non-existing documentation, fixes FTBFS on powerpc
  * add NEWS.Debian file
  * install doc/APIChanges and refer to them in NEWS.Debian (Closes: #623682)
  * readd deprecated avcodec_thread_init in libavformat

 -- Reinhard Tartler <siretart@tauware.de>  Sun, 01 May 2011 18:58:40 +0200

libav (4:0.7~b1-1) experimental; urgency=low

  * New upstream version
  * bump SONAME and SHLIBS
  * configure flags --disable-stripping was removed upstream
  * the MAINTAINERS file was removed upstream
  * remove patch disable-configuration-warning.patch
  * drop avfilter confflags, it is enable by default in 0.7
  * libfaad wrapper has been removed upstream
  * also update the *contents* of the lintian overrides

 -- Reinhard Tartler <siretart@tauware.de>  Tue, 19 Apr 2011 15:04:55 +0200

libav (4:0.6.2-1) unstable; urgency=medium

  [ Reinhard Tartler ]
  * Imported Upstream version 0.6.2
    - include security fixes (Closes: #611495)
  * rename source package to libav
  * Switch to libav packages
  * copy in changelog entries from the 0.5 packaging branch (Closes: #616190)
  * update version numbering
  * make buildlogs verbose
  * Introduce 'libav-source', which contains the patched sources of libav
  * rename source package to libav

  [ Fabian Greffrath ]
  * Fix cp of doxy documentation fails with "Argument list too long" (Closes: #618679)

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 19 Mar 2011 08:13:46 +0100

ffmpeg (4:0.6.1-5) unstable; urgency=low

  * don't enable vaapi support on the hurd, Closes: #613034
  * minor updates to libswscale0's package description
  * Force upgrade of mplayer pre-rc4 for upgrades of libswscale,
    Closes: #612292

 -- Reinhard Tartler <siretart@tauware.de>  Sun, 13 Feb 2011 09:25:42 +0100
