@@ -1,18 +1,0 @@
-libav (4:0.7~b1-1) experimental; urgency=low
-
-  * The 0.7 release series of Libav has a number of old and deprecated
-    APIs removed, so your packages might need some adaptations. Please see
-    the file /usr/share/doc/libavcodec53/APIChanges for a list of API
-    additions and removals. More detailed information about the new API is
-    provided in the shipped doxygen documentation.
-
- -- Reinhard Tartler <siretart@tauware.de>  Tue, 19 Apr 2011 15:04:55 +0200
-
-libav (4:0.6.2-1) unstable; urgency=low
-
-  * Libav represents the successor of the former ffmpeg source package. It
-    provides all libraries and provides an upgrade path for existing
-    application packages.  
-
- -- Reinhard Tartler <siretart@tauware.de>  Sat, 19 Mar 2011 08:13:46 +0100
-
