@@ -1,0 +1,9 @@
+libav (4:0.7~b1-1) experimental; urgency=low
+
+  The 0.7 release series of Libav has a number of old and deprecated
+  APIs removed, so your packages might need some adaptations. Please see
+  the file APIChanges.gz for a list of API additions and removals. More
+  detailed information about the new API is provided in the shipped
+  doxygen documentation.
+
+ -- Reinhard Tartler <siretart@tauware.de>  Tue, 19 Apr 2011 15:04:55 +0200
