@@ -116,10 +116,14 @@ binary-arch: build install codecs.txt formats.txt
 	dh_testroot
 	dh_installman -pffmpeg debian/qt-faststart.1
 	dh_installdocs doc/optimization.txt
-	dh_installdocs -A CREDITS doc/TODO doc/APIchanges
+	dh_installdocs -A CREDITS doc/TODO
 	dh_installdocs -A debian/README.Debian
 	dh_installdocs -p libavcodec52 codecs.txt
 	dh_installdocs -p libavformat52 formats.txt
+	dh_installdocs -p libavcodec-dev -plibavdevice-dev \
+		-plibavformat-dev -plibavfilter-dev -plibpostproc-dev \
+		-plibswscale-dev -plibavutil-dev -plibav-doc \
+		doc/APIchanges
 	dh_installexamples -pffmpeg doc/ffserver.conf debian/recordshow.sh
 	dh_installexamples -plibavcodec-dev libavcodec/api-example.c
 	dh_installchangelogs Changelog
